--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <script defer src=""></script>
-    <title>Document</title>
+    <title>Quizard!</title>
 </head>
 
 <body>
