--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
             
             <input type="submit" value="Login">
         </form>
+        <p>Don’t have an account? <a href="#" id="show-signup">Sign up here</a></p>
     </div>
 </body>
 
