nav bar changes

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,13 @@
 
 <body>
     <div class="container">
-        <h1>Sign in</h1>
+        <h1>Quizard!</h1>
+
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="signup.html">Sign up</a>
+        </nav>
         
         <form action="">
             <label for="username">Username:</label>
