add registration page and functionality, will take user info and generate a hashed password

--- a/client/register.html
+++ b/client/register.html
@@ -16,12 +16,28 @@
         <main>
             <form id="registration-form">
                 <fieldset>
-                    <label for="username">Username</label>
-                    <input type="text" id="username" name="username">
+                    <label for="email">Email</label>
+                    <input type="text" id="email" name="email">
                 </fieldset>
                 <fieldset>
                     <label for="password">Password</label>
                     <input type="text" id="password" name="password">
+                </fieldset>
+                <fieldset>
+                    <label for="firstname">First Name</label>
+                    <input type="text" id="firstname" name="firstname">
+                </fieldset>
+                <fieldset>
+                    <label for="lastname">Last Name</label>
+                    <input type="text" id="lastname" name="lastname">
+                </fieldset>
+                <fieldset>
+                    <label for="userrole">User Role</label>
+                    <input type="text" id="userrole" name="userrole">
+                </fieldset>
+                <fieldset>
+                    <label for="yeargroup">Year Group</label>
+                    <input type="text" id="yeargroup" name="yeargroup">
                 </fieldset>
                 <input type="submit" value="Register">
             </form>
