add more info to readme

--- a/client/register.html
+++ b/client/register.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <h1>Login Test</h1>
+            <h1>Register Test</h1>
         </header>
         <main>
             <form id="registration-form">
@@ -41,6 +41,7 @@
                 </fieldset>
                 <input type="submit" value="Register">
             </form>
+            <p>Already registered? <a href="./login.html">Log in here</a>.</p>
         </main>
     </body>
 </html>
