--- a/client/login.html
+++ b/client/login.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
-        <script src="./assets/register.js" defer></script>
+        <script src="./assets/login.js" defer></script>
         <title></title>
     </head>
     <body>
