--- a/client/about.html
+++ b/client/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h2>Navigation</h2>
+    <h2>Quizard</h2>
     <nav>
       <a href="index.html">Login</a> | 
       <a href="signup.html">Sign Up</a> | 
