--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <script defer src=""></script>
+    <script defer src="./assets/login.js"></script>
     <title>Quizard!</title>
 </head>
 
@@ -20,9 +20,9 @@
 
     <div class="container">
         
-        <form action="">
-            <label for="username">Username:</label>
-            <input type="text" id="username" placeholder="Enter your username">
+        <form action="" id="login-form">
+            <label for="email">Email:</label>
+            <input type="text" id="email" placeholder="Enter your email">
             
             <label for="password">Password:</label>
             <input type="password" id="password" placeholder="Enter your password">
