interactive header on all pages

--- a/client/about.html
+++ b/client/about.html
@@ -8,18 +8,21 @@
   <script defer src="./js/about.js"></script>
 </head>
 <body>
-
-    <h2>Quizard</h2>
+  <header>
+    <h1><a href="index.html" class="logo">Quizard</a></h1>
     <nav>
       <a href="index.html">Login</a> | 
       <a href="signup.html">Sign Up</a> | 
-      <a href="dashboard.html">Dashboard</a>
+      <a href="dashboard.html">Dashboard</a> | 
+      <a href="about.html">About</a>
     </nav>
+  </header>
 
   <div class="container">
-    <h1>About This App</h1>
+    <h2>About This App</h2>
     <p>
-      This interactive web application is designed to help students test their knowledge in a fun and engaging way.
+      Quizard is an interactive web application designed to help Key Stage 3 students 
+      test their knowledge in a fun and engaging way.
     </p>
 
     <p>
@@ -46,7 +49,6 @@
       <li>👨‍💻 Korede</li>
       <li>👤 Kirk</li>
     </ul>
-
   </div>
 </body>
 </html>
