--- a/client/signup.html
+++ b/client/signup.html
@@ -8,30 +8,40 @@
   <script defer src="./js/signup.js"></script>
 </head>
 <body>
+  <header>
+    <h1><a href="index.html" class="logo">Quizard</a></h1>
+    <nav>
+      <a href="index.html">Login</a> |
+      <a href="signup.html">Sign Up</a> |
+      <a href="dashboard.html">Dashboard</a> |
+      <a href="about.html">About</a>
+    </nav>
+  </header>
+
   <div class="container">
-    <h1>Sign Up</h1>
+    <h2>Create Your Account</h2>
     <form id="signup-form">
       <label for="firstname">First Name:</label>
-      <input type="text" id="firstname" required>
+      <input type="text" id="firstname" name="firstname" required>
 
       <label for="lastname">Last Name:</label>
-      <input type="text" id="lastname" required>
+      <input type="text" id="lastname" name="lastname" required>
 
       <label for="email">Email:</label>
-      <input type="email" id="email" required>
+      <input type="email" id="email" name="email" required>
 
       <label for="passwordhash">Password:</label>
-      <input type="password" id="passwordhash" required>
+      <input type="password" id="passwordhash" name="password" required>
 
       <label for="userrole">Role:</label>
-      <select id="userrole" required>
+      <select id="userrole" name="userrole" required>
         <option value="">Select role</option>
         <option value="student">Student</option>
         <option value="teacher">Teacher</option>
       </select>
 
       <label for="yeargroup">Year Group:</label>
-      <input type="number" id="yeargroup" min="7" max="11" placeholder="7-11" required>
+      <input type="number" id="yeargroup" name="yeargroup" min="7" max="11" placeholder="7-11" required>
 
       <button type="submit">Sign Up</button>
     </form>
