--- a/client/signup.html
+++ b/client/signup.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign Up</title>
-  <link rel="stylesheet" href="./style.css">
-  <script defer src="./js/signup.js"></script>
-</head>
-<body>
-  <div class="container">
-    <h1>Sign Up</h1>
-    <form id="signup-form">
-      <label for="firstname">First Name:</label>
-      <input type="text" id="firstname" required>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Sign Up</title>
+        <link rel="stylesheet" href="./style.css">
+        <script defer src="./assets/register.js"></script>
+    </head>
+    <body>
+        <div class="container">
+            <header>
+                <h1>Sign Up</h1>
+            </header>            
+            <form id="signup-form">
+                <label for="firstname">First Name:</label>
+                <input type="text" id="firstname" name="firstname" required>
 
-      <label for="lastname">Last Name:</label>
-      <input type="text" id="lastname" required>
+                <label for="lastname">Last Name:</label>
+                <input type="text" id="lastname" name="lastname" required>
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
 
-      <label for="passwordhash">Password:</label>
-      <input type="password" id="passwordhash" required>
+                <label for="passwordhash">Password:</label>
+                <input type="password" id="passwordhash" name="passwordhash" required>
 
-      <label for="userrole">Role:</label>
-      <select id="userrole" required>
-        <option value="">Select role</option>
-        <option value="student">Student</option>
-        <option value="teacher">Teacher</option>
-      </select>
+                <label for="userrole">Role:</label>
+                <select id="userrole" name="userrole" required>
+                    <option value="">Select role</option>
+                    <option value="student">Student</option>
+                    <option value="teacher">Teacher</option>
+                </select>
 
-      <label for="yeargroup">Year Group:</label>
-      <input type="number" id="yeargroup" min="7" max="11" placeholder="7-11" required>
-
-      <button type="submit">Sign Up</button>
-    </form>
-    <p>Already have an account? <a href="index.html">Login here</a></p>
-  </div>
-</body>
+                <label for="yeargroup">Year Group:</label>
+                <input type="number" id="yeargroup" name="yeargroup" min="7" max="11" placeholder="7-11" required>
+                
+                <input type="submit" value="Sign Up">
+            </form>
+            <p>Already have an account? <a href="index.html">Login here</a></p>
+        </div>
+    </body>
 </html>
