--- a/client/login.html
+++ b/client/login.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-        <script src="./assets/login.js" defer></script>
-        <title></title>
-    </head>
-    <body>
-        <header>
-            <h1>Login Test</h1>
-        </header>
-        <main>
-            <form id="login-form">
-                <fieldset>
-                    <label for="email">Email</label>
-                    <input type="text" id="email" name="email">
-                </fieldset>
-                <fieldset>
-                    <label for="password">Password</label>
-                    <input type="text" id="password" name="password">
-                </fieldset>
-                <input type="submit" value="Log in">
-            </form>
-            <p>No account? <a href="./register.html">Sign up here</a>.</p>
-        </main>
-    </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login | Quizard</title>
+  <link rel="stylesheet" href="./style.css">
+  <script src="./assets/login.js" defer></script>
+</head>
+<body>
+  <header>
+    <h1><a href="index.html" class="logo">Quizard</a></h1>
+    <nav>
+      <a href="index.html">Login</a> | 
+      <a href="register.html">Sign Up</a> | 
+      <a href="dashboard.html">Dashboard</a> | 
+      <a href="about.html">About</a>
+    </nav>
+  </header>
+
+  <main class="container">
+    <h2>Login</h2>
+    <form id="login-form">
+      <fieldset>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
+      </fieldset>
+      <fieldset>
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" required>
+      </fieldset>
+      <button type="submit">Log in</button>
+    </form>
+    <p>No account? <a href="./register.html">Sign up here</a>.</p>
+  </main>
+</body>
 </html>
