--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
+   
+    <a href="index.html" class="homepage link">
     <h1>Quizard!</h1>
+    </a>
 
       <nav>
             <a href="index.html">Home</a>
@@ -18,6 +21,10 @@
             <a href="signup.html">Sign up</a>
      </nav>
 
+    <div class="imagecontainer">
+        <img src="https://wallpapers.com/images/featured/educational-background-uygkkwviq3gbhewf.jpg" alt="background">
+    </div>
+        
     <div class="container">
         
         <form action="">
