--- a/client/signup.html
+++ b/client/signup.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sign Up</title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./signup.css">
         <script defer src="./assets/register.js"></script>
     </head>
 
@@ -20,6 +20,10 @@
             </nav>
         </header>
 
+        <div class="imagecontainer">
+        <img src="https://www.freevector.com/uploads/vector/preview/28114/Education_Background_Vector_8.jpg" alt="background">
+        </div>
+
         <div class="container">
             <h2>Create Your Account</h2>
             <form id="signup-form">
@@ -27,13 +31,13 @@
                 <input type="text" id="firstname" name="firstname" required>
 
                 <label for="lastname">Last Name:</label>
-                <input type="text" id="lastname" name="lastname" required>
+                <input type="text" id="lastname" name="lastname" required><br>
 
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
 
                 <label for="passwordhash">Password:</label>
-                <input type="password" id="passwordhash" name="passwordhash" required>
+                <input type="password" id="passwordhash" name="passwordhash" required><br>
 
                 <label for="userrole">Role:</label>
                 <select id="userrole" name="userrole" required>
