about page layout

--- a/client/about.html
+++ b/client/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./about.css">
   <script defer src="./js/about.js"></script>
 </head>
 <body>
@@ -18,8 +18,16 @@
     </nav>
   </header>
 
+  <div class="imagecontainer">
+        <img src="https://static.vecteezy.com/system/resources/previews/001/895/648/original/question-mark-on-chalkboard-background-vector.jpg" alt="background">
+  </div>
+
+  
+
   <div class="container">
-    <h2>About This App</h2>
+    <div class="row">
+      <div class="column">
+      <h2>About This App</h2>
     <p>
       Quizard is an interactive web application designed to help Key Stage 3 students 
       test their knowledge in a fun and engaging way.
@@ -33,14 +41,18 @@
       <li>📊 Score tracking and feedback</li>
       <li>👤 A simple login system so each student can have their own progress saved</li>
     </ul>
-
+       </div>
+    
+    <div class="column">
     <h2>Why We Built This</h2>
     <p>
       Our goal is to make learning interactive and enjoyable for students.  
       By combining technology with education, we encourage students to practice regularly 
       and improve their understanding in key subjects.
     </p>
+    </div>
 
+    <div class="column">
     <h2>Meet the Team</h2>
     <ul>
       <li>👨 Nicholas</li>
@@ -49,6 +61,7 @@
       <li>👨‍💻 Korede</li>
       <li>👤 Kirk</li>
     </ul>
+  </div>
   </div>
 </body>
 </html>
