--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -11,6 +11,9 @@
 
     <header class="logo-header">
     <h1><a href="index.html" class="logo">Quizard</a></h1>
+      <div class="logo-centre">
+    <img src="https://play-lh.googleusercontent.com/zGwlsBJkPJeGx9V4f6qdZaiSkNXwI88H5aKbUE4SgOlSB8AyLHt8xuKRdeoCFp3GN6o" alt="Quizard Logo">
+  </div>
   </header>
  
   <header class="top-bar">
