--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard | Quizard</title>
   <link rel="stylesheet" href="./dashboard.css">
-  <script defer src="./js/dashboard.js"></script>
+  <script defer src="./assets/dashboard.js"></script>
 </head>
 <body>
 
