added links to quizzes in dashboard

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -31,10 +31,16 @@
       </ul>
     </aside>
 
-    <section class="quiz-list">
+    <!-- <section class="quiz-list">
       <h3>Quiz List</h3>
       <p>Available quizzes will be listed here.</p>
+    </section> -->
+    <section class="quiz-list">
+      <h3>Available Quizzes</h3>
+        <ul id="quiz-list-ul">
+        </ul>
     </section>
+
 
     <section class="description">
       <h3>Description</h3>
