--- a/client/quiz.html
+++ b/client/quiz.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class="quiz-controls">
-        <button type="submit" id="submit-btn">Submit Quiz</button>
+        <button type="submit" id="submit-btn">Submit </button>
       </div>
     </form>
   </main>
