--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
     <h2>Sign In</h2>
     <form id="login-form">
       <label for="email">Email:</label>
-      <input type="text" id="email" name="email" placeholder="Enter your email" required>
+      <input type="text" id="email" name="email" placeholder="Enter your email" required><br>
       
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" placeholder="Enter your password" required>
