--- a/client/quiz.html
+++ b/client/quiz.html
@@ -23,7 +23,9 @@
       </div>
 
       <div class="quiz-controls">
-        <button type="submit" id="submit-btn">Submit </button>
+        <button type="button" id="prev-btn">Previous</button>
+        <button type="button" id="next-btn">Next</button>
+        <button type="button" id="submit-btn">Submit</button>
       </div>
     </form>
   </main>
