add mfa, app will email user with a code, and the user will need to enter the code before they are able to login

--- a/client/index.html
+++ b/client/index.html
@@ -32,6 +32,11 @@
       <input type="password" id="password" name="password" placeholder="Enter your password" required>
       
       <button type="submit">Login</button>
+      <div id="otp-container" style="display:none; margin-top:10px;">
+        <label for="otp">Enter OTP:</label>
+        <input type="text" id="otp" name="otp" placeholder="Enter OTP">
+        <button type="button" id="otp-submit">Verify OTP</button>
+      </div>
     </form>
     <p>Don’t have an account? <a href="signup.html">Sign up here</a></p>
   </div>
