timeout after submitting

--- a/client/quiz.html
+++ b/client/quiz.html
@@ -26,6 +26,10 @@
         <button type="button" id="prev-btn">Previous</button>
         <button type="button" id="next-btn">Next</button>
         <button type="button" id="submit-btn">Submit</button>
+        <script> setTimeout(() => { document.getElementById('submit-btn').style.display = 'none'; 
+          window.location.href = 'dashboard.html';
+        }, 5000);
+         </script>
       </div>
     </form>
   </main>
