implement functionality to view past scores

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -40,11 +40,19 @@
         </ul>
     </section>
 
+    
+
 
     <section class="description">
       <h3>Description</h3>
       <p>Select a quiz to see its description.</p>
     </section>
+
+    <!-- <section id="scores" class="content hidden"></section>
+
+    <section id="past" class="content hidden"></section> -->
+
+    <section id="cards-container"></section>
   </main>
 </body>
 </html>
