add ability to hover over quizzes to see their description

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -30,27 +30,15 @@
       </ul>
     </aside>
 
-    <!-- <section class="quiz-list">
-      <h3>Quiz List</h3>
-      <p>Available quizzes will be listed here.</p>
-    </section> -->
     <section class="quiz-list">
       <h3>Available Quizzes</h3>
-        <ul id="quiz-list-ul">
-        </ul>
+        <ul id="quiz-list-ul"></ul>
     </section>
-
-    
-
 
     <section class="description">
       <h3>Description</h3>
-      <p>Select a quiz to see its description.</p>
+      <p id="quiz-description">Hover over a quiz to see its description.</p>
     </section>
-
-    <!-- <section id="scores" class="content hidden"></section>
-
-    <section id="past" class="content hidden"></section> -->
 
     <section id="cards-container"></section>
   </main>
