fixed user and points on dashboard

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -17,9 +17,9 @@
   </header>
  
   <header class="top-bar">
-    <div class="profile">Profile</div>
-    <div class="points">Points</div>
-  </header>
+  <div class="profile">Profile: <span id="user-email">Loading...</span></div>
+  <div class="points">Points: <span id="user-points">0</span></div>
+</header>
 
   <main class="dashboard">
     <aside class="navbar">
