--- a/client/teacher.html
+++ b/client/teacher.html
@@ -13,6 +13,9 @@
 
     <header class="logo-header">
         <h1><a href="teacher.html" class="logo">Quizard</a></h1>
+        <nav>
+        <button id="logout">Log out</button>
+        </nav>
         <div class="logo-centre">
             <img src="https://play-lh.googleusercontent.com/zGwlsBJkPJeGx9V4f6qdZaiSkNXwI88H5aKbUE4SgOlSB8AyLHt8xuKRdeoCFp3GN6o"
                 alt="Quizard Logo">
