--- a/client/teacher.html
+++ b/client/teacher.html
@@ -7,6 +7,7 @@
     <title>Teacher Dashboard | Quizard</title>
     <link rel="stylesheet" href="./teacher.css">
     <script defer src="./assets/teacher.js"></script>
+    <script defer src="./assets/logout.js"></script>
 </head>
 
 <body>
